<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/main_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_camera"/>

    <Button
        android:id="@+id/main_animation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_animation"/>

    <Button
        android:id="@+id/main_recorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_recorder"/>

    <Button
        android:id="@+id/main_convert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_convert"/>

</LinearLayout>